--- a/news.html
+++ b/news.html
@@ -1,149 +1,238 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>News</title>
 
-      <!-- Bootstrap -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
 
-      <!-- Fontawesome -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous"
-        referrerpolicy="no-referrer" />
+    <!-- Fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-      <!-- CSS -->
-      <link rel="icon" href="images/favicon.png">
-      <link rel="stylesheet" href="styles.css">
-
+    <!-- CSS -->
+    <link rel="icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <!-- Navbar -->
 
-      <!-- Navbar -->
+    <section id="navbar">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark bg-dark navbar-bar nav-container"
+      >
+        <img class="logo" src="images/logo.png" alt="Facilitamed Logo" />
+        <a class="navbar-brand" href="">Facilitamed eV</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <section id="navbar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-bar nav-container">
-          <img class="logo" src="images/logo.png" alt="Facilitamed Logo">
-          <a class="navbar-brand" href="">Facilitamed eV</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <div
+          class="collapse navbar-collapse nav-length"
+          id="navbarTogglerDemo02"
+        >
+          <ul class="navbar-nav ms-auto navbar-items">
+            <li class="nav-item items">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item items">
+              <a class="nav-link" href="students.html">For Students</a>
+            </li>
+            <li class="nav-item items">
+              <a class="nav-link" href="about-us.html">About Us</a>
+            </li>
+            <li class="nav-item items">
+              <a class="nav-link" href="support-us.html">Support Us</a>
+            </li>
+            <li class="nav-item items">
+              <a class="nav-link" href="news.html">News</a>
+            </li>
+            <li class="nav-item items">
+              <button
+                type="button"
+                class="btn btn-secondary btn-sm nav-btn en-btn"
+              >
+                <a href="news.html" class="navbtn-link nav-link en-link">
+                  <img src="images/usa-flag.PNG" alt="English" class="lang-img"
+                /></a>
+              </button>
 
-          <div class="collapse navbar-collapse nav-length" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ms-auto navbar-items">
-              <li class="nav-item items">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item items">
-                <a class="nav-link" href="students.html">For Students</a>
-              </li>
-              <li class="nav-item items">
-                <a class="nav-link" href="about-us.html">About Us</a>
-              </li>
-              <li class="nav-item items">
-                <a class="nav-link" href="support-us.html">Support Us</a>
-              </li>
-              <li class="nav-item items">
-                <a class="nav-link" href="news.html">News</a>
-              </li>
-              <li class="nav-item items">
-                <button type="button" class="btn btn-secondary btn-sm nav-btn en-btn"><a href="news.html" class="navbtn-link nav-link en-link">
-                  <img src="images/usa-flag.PNG" alt="English" class="lang-img"></a></button>
+              <button
+                type="button"
+                class="btn btn-secondary btn-sm nav-btn sp-btn"
+              >
+                <a class="navbtn-link nav-link sp-link" href="noticias.html"
+                  ><img src="images/spanish.png" alt="Spanish" class="lang-img"
+                /></a>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </section>
 
-                <button type="button" class="btn btn-secondary btn-sm nav-btn sp-btn">
-                  <a class="navbtn-link nav-link sp-link" href="noticias.html"><img src="images/spanish.png" alt="Spanish" class="lang-img"></a>
-                </button>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </section>
+    <section id="heading">
+      <h1 class="heading-title">Meet Our Students</h1>
+    </section>
 
-      <section id="heading">
-        <h1 class="heading-title">Meet Our Students</h1>
-
-      </section>
-
-      <!-- Our Students -->
-      <section id="students">
-
-        <div class="row rows">
-          <div class="col-lg-6">
-            <img src="images/Roberto.jpg" alt="Roberto Rocha" class="directors-img">
-            <p class="director-p"><strong>Roberto Rocha</strong></p>
-          </div>
-
-          <div class="col-lg-6">
-            <p class="students-p ">Roberto is a student at Universidad Nacional Autónoma de Nicaragua (UNAN) currently completing the second semester of his fourth year.</p>
-            <p class="students-p">After graduating, Roberto wants to specialize in internal medicine or epidemology.</p>
-          </div>
-
+    <!-- Our Students -->
+    <section id="students">
+      <div class="row rows">
+        <div class="col-lg-6">
+          <img
+            src="images/Roberto.jpg"
+            alt="Roberto Rocha"
+            class="directors-img"
+          />
+          <p class="director-p"><strong>Roberto Rocha</strong></p>
         </div>
 
-        <div class="row rows">
-          <div class="col-lg-6">
-            <p class="students-p bottom-p">Julio is a student at Universidad Nacional Autónoma de Nicaragua (UNAN)  completing the second semester of his third year.</p>
-            <p class="students-p bottom-p">After graduating, Julio wants to specialize in ophtalmology, internal medicine, or surgery.</p>
-          </div>
-
-          <div class="col-lg-6 profile-container">
-            <img src="images/roberto.jpeg" alt="Julio Borge" class="directors-img bottom-img">
-            <p class="director-p bottom-name"><strong>Julio Borge</strong></p>
-          </div>
-
+        <div class="col-lg-6">
+          <p class="students-p">
+            Roberto is a student at Universidad Nacional Autónoma de Nicaragua
+            (UNAN) currently completing the second semester of his fourth year.
+          </p>
+          <p class="students-p">
+            After graduating, Roberto wants to specialize in internal medicine
+            or epidemology.
+          </p>
         </div>
-      </section>
-
-
-
-      <!-- Support -->
-
-      <section id="blank">
-
-      </section>
-
-      <!-- infoTab -->
-
-      <section id="infoTab">
-
-        <div class="row">
-
-          <div class="col-lg-3 info-basic1">
-            <h4 class="info-listTitle">Facilitamed eV</h4>
-            <ul class="info-list">
-              <li class="info-item"><strong>Email:</strong> facilitamed.ev@gmail.com</li>
-              <li class="info-item"><strong>Address:</strong> Im Rotbad 47, 72076 Tuebingen, Germany</li>
-              <li class="info-item"><strong>Bank Account:</strong> Sparkasse Tuebingen</li>
-              <li class="info-item"><strong>IBAN:</strong> DE11 6415 0020 0004 5746 59</li>
-              <li class="info-item"><strong>BIC:</strong> SOLADES1TUB</li>
-            </ul>
-          </div>
-
-          <div class="col-lg-6 info">
-            <h3>For more Information:</h3>
-            <hr class="info-line">
-            <button type="button" class="btn btn-lg problem-btn">
-          <a href="mailto:facilitamed.ev@gmail.com" target="_blank" class="all-btns">Email Us!</a>
-            </button>
-          </div>
-
-          <div class="col-lg-3 info-basic">
-            <h4 class="info-listTitle">Quick Links</h4>
-            <ul class="info-list">
-              <li class="info-item"><a href="index.html" class="info-item-link">Home</a></li>
-              <li class="info-item"><a href="students.html" class="info-item-link">For Students</a></li>
-              <li class="info-item"><a href="about-us.html" class="info-item-link">About Us</a></li>
-              <li class="info-item"><a href="support-us.html" class="info-item-link">Support Us</a></li>
-              <li class="info-item"><a href="news.html" class="info-item-link">News</a></li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <div class="footer">
-        <p class="footer-note">© 2023 Webmaster Julian Sandoval</p>
       </div>
 
+      <div class="row rows">
+        <div class="col-lg-6">
+          <p class="students-p bottom-p">
+            Julio is a student at Universidad Nacional Autónoma de Nicaragua
+            (UNAN) completing the second semester of his third year.
+          </p>
+          <p class="students-p bottom-p">
+            After graduating, Julio wants to specialize in ophtalmology,
+            internal medicine, or surgery.
+          </p>
+        </div>
+
+        <div class="col-lg-6 profile-container">
+          <img
+            src="images/roberto.jpeg"
+            alt="Julio Borge"
+            class="directors-img bottom-img"
+          />
+          <p class="director-p bottom-name"><strong>Julio Borge</strong></p>
+        </div>
+      </div>
+
+      <div class="row rows">
+        <div class="col-lg-6">
+          <img
+            src="images/Anyel.jpg"
+            alt="Anyel Guatemala"
+            class="directors-img"
+          />
+          <p class="director-p"><strong>Anyel Guatemala</strong></p>
+        </div>
+
+        <div class="col-lg-6">
+          <p class="students-p">
+            Anyel is a student at Universidad Nacional Autónoma de Nicaragua
+            (UNAN) completing the second semester of his third year.
+          </p>
+          <p class="students-p">
+            After graduating, Anyel wants to specialize in general surgery.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Support -->
+
+    <section id="blank"></section>
+
+    <!-- infoTab -->
+
+    <section id="infoTab">
+      <div class="row">
+        <div class="col-lg-3 info-basic1">
+          <h4 class="info-listTitle">Facilitamed eV</h4>
+          <ul class="info-list">
+            <li class="info-item">
+              <strong>Email:</strong> facilitamed.ev@gmail.com
+            </li>
+            <li class="info-item">
+              <strong>Address:</strong> Im Rotbad 47, 72076 Tuebingen, Germany
+            </li>
+            <li class="info-item">
+              <strong>Bank Account:</strong> Sparkasse Tuebingen
+            </li>
+            <li class="info-item">
+              <strong>IBAN:</strong> DE11 6415 0020 0004 5746 59
+            </li>
+            <li class="info-item"><strong>BIC:</strong> SOLADES1TUB</li>
+          </ul>
+        </div>
+
+        <div class="col-lg-6 info">
+          <h3>For more Information:</h3>
+          <hr class="info-line" />
+          <button type="button" class="btn btn-lg problem-btn">
+            <a
+              href="mailto:facilitamed.ev@gmail.com"
+              target="_blank"
+              class="all-btns"
+              >Email Us!</a
+            >
+          </button>
+        </div>
+
+        <div class="col-lg-3 info-basic">
+          <h4 class="info-listTitle">Quick Links</h4>
+          <ul class="info-list">
+            <li class="info-item">
+              <a href="index.html" class="info-item-link">Home</a>
+            </li>
+            <li class="info-item">
+              <a href="students.html" class="info-item-link">For Students</a>
+            </li>
+            <li class="info-item">
+              <a href="about-us.html" class="info-item-link">About Us</a>
+            </li>
+            <li class="info-item">
+              <a href="support-us.html" class="info-item-link">Support Us</a>
+            </li>
+            <li class="info-item">
+              <a href="news.html" class="info-item-link">News</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <div class="footer">
+      <p class="footer-note">© 2023 Webmaster Julian Sandoval</p>
+    </div>
   </body>
 </html>
